Fixed tile values spacing

--- a/public/css/scrabble.css
+++ b/public/css/scrabble.css
@@ -129,25 +129,20 @@ body {
     top: 85%;
     left: 7.5%;
     min-height: 0 !important;
-    height: 5%;
+    height: 36px;
     width: 10%;
 }
 
-.tile-values-label {
-    top: 0;
-    padding-top: 0;
-    margin-top: 0;
-    color: #009688;
-    cursor: pointer;
+.tile-values-btn-wrapper {
+  display: table-cell;
+  vertical-align: middle;
 }
 
-.tile-values-label:hover {
-    background-color: lightgrey;
-}
-
-.tile-values-tooltip {
-    position: fixed !important;
-    top: 56% !important;
+.tile-values-btn {
+    vertical-align: middle;
+    display: block;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .tile-values-td {
